# My-Shell

./: CMakeLists.txt  Makefile  My_Shell  README.md  globals.c  globals.h  main.c
commands/: bg.c  bg.h  cd.c  cd.h  echo.c  echo.h  execvp.c  execvp.h  fg.c  fg.h  jobs.c  jobs.h  ls.c  ls.h  pinfo.c  pinfo.h  pwd.c  pwd.h  sig.c  sig.h
processer/: bgprocess.c  bgprocess.h  pipeline.c  pipeline.h  prompt.c  prompt.h  redirections.c  redirections.h  signals.c  signals.h  tokenizer.c  tokenizer.h
utils/: bgprocessmat.c  bgprocessmat.h  files.c  files.h  inputmat.c  inputmat.h  jobsmat.c  jobsmat.h  print.c  print.h  process.c  process.h  processmat.c  processmat.h  util.c  util.h
